# language-detective

./: .gitignore  README.md  env.example  pyproject.toml  requirements.txt  run.py  start_service.py  test_mock_only.py  test_service.py
src/: __init__.py  coordinator.py  coordinator_mock.py  main.py  models.py
src/connectors/: __init__.py  base.py  elevenlabs.py  elevenlabs_mock.py  gemini.py  openai_mock.py  sarvam.py  sarvam_mock.py
